--- a/pom.xml
+++ b/pom.xml
@@ -69,10 +69,32 @@
       <version>5.3.13</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>5.6.0</version>
+    </dependency>
+
+
+    <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>5.6.0</version>
+    </dependency>
+
+
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>5.6.1.Final</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-dbcp</artifactId>
+      <version>10.0.12</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/javax.transaction/javax.transaction-api -->
@@ -119,6 +141,7 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>javax</groupId>
       <artifactId>javaee-api</artifactId>
@@ -137,7 +160,7 @@
           <version>2.4</version>
           <configuration>
             <warSourceDirectory>src/webapp</warSourceDirectory>
-            <warName>spring_mvc</warName>
+            <warName>spring_security</warName>
             <failOnMissingWebXml>false</failOnMissingWebXml>
           </configuration>
         </plugin>
@@ -154,7 +177,7 @@
         </configuration>
       </plugin>
     </plugins>
-    <finalName>Spring_MVC</finalName>
+    <finalName>Spring_security</finalName>
   </build>
 
 </project>
